--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -29,14 +29,23 @@ http {
         listen <%= ENV["PORT"] %>;
         server_name _;
         keepalive_timeout 5;
+
+        <% if ENV['CSP_NONCE_ID'] %>
         set_secure_random_alphanum $cspNonce 32;
+        sub_filter_once off;
+        sub_filter_types *;
+        sub_filter '<%= ENV['CSP_NONCE_ID'] %>' '$cspNonce';
+        <% end %>
 
         location / {
           proxy_pass <%= 'http://' + ENV['ROUTE_TO_URL'].sub(%r{^[a-z]+://}, '').sub(%r{/+}, '') + '/' %>;
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header Host $host;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          <% if ENV['CSP_NONCE_ID'] %>
           proxy_set_header Accept-Encoding "";
+          <% end %>
+
           <% if ENV['HIDE_GITHUB_HEADERS'].to_i == 1 %>
           proxy_hide_header X-GitHub-Request-Id;
           proxy_hide_header X-Fastly-Request-ID;
